# 36c3_led_stuff

./: Cargo.toml  README.md
c3_display/: Cargo.toml  README.md  colors.md  memory.x  openocd.cfg
c3_display/.cargo/: config
c3_display/src/: brightness.rs  hub75dma.rs  lib.rs  main.rs
c3_host/: Cargo.toml
c3_host/src/: main.rs
c3_host_xmc/: Cargo.toml
c3_host_xmc/src/: main.rs
c3_led_tail/: Cargo.toml
c3_led_tail/src/: lib.rs  main.rs
c3_led_tail_g071/: Cargo.toml
c3_led_tail_g071/src/: main.rs
c3_led_tail_microbit/: Cargo.toml
c3_led_tail_microbit/src/: main.rs
c3_led_tail_trinketm0/: Cargo.toml  notes.org
c3_led_tail_trinketm0/.cargo/: config
c3_led_tail_trinketm0/src/: main.rs
resources/: 36c3_white_small.tga  36c3_white_small.xcf  c3_led_stuff.tga  c3_led_stuff.xcf  ewg_small.tga  ewg_small.xcf  ferris-flat-happy-small.tga  ferris-flat-happy-small.xcf  rust_2am.tga  rust_2am.xcf
src/: main.rs
