[package]
name = "c3_led_tail"
version = "0.1.0"
authors = ["David Sawatzke <david-sawatzke@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stm32f0xx-hal = {version = "0.15.2", features = ["rt", "stm32f042"]}
panic-halt = "0.2.0"
cortex-m = "0.6.1"
embedded-hal = "0.2.3"
cortex-m-rtfm = "0.5.1"
smart-leds = "0.3.0"
ws2812-nop-stm32f0 = {path = "../../181127-embedded_rust-69/smart-leds/ws2812-nop-stm32f0/"}

[profile.dev]
debug = true

[profile.release]
debug = true
lto = true
opt-level = "s"
