[package]
name = "c3_display"
version = "0.1.0"
authors = ["David Sawatzke <david-sawatzke@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# stm32f1xx-hal = {version = "0.5.0", features = ["rt", "stm32f103", "medium"]}
stm32g0xx-hal = {git = "https://github.com/stm32-rs/stm32g0xx-hal", rev = "b65be5b", features = ["rt", "stm32g07x"]}
panic-semihosting = "0.5.3"
cortex-m = "0.6.1"
embedded-hal = "0.2.3"
embedded-graphics = {version = "0.6.0-alpha.2", features = ["tga"]}
cortex-m-rtfm = "0.5.1"
cortex-m-semihosting = "0.3.5"
numtoa = "0.2.3"

[profile.dev]
debug = true

[profile.release]
debug = true
lto = true
opt-level = "s"
