[package]
name = "c3_led_tail"
version = "0.1.0"
authors = ["David Sawatzke <david-sawatzke@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Remove when DoubleEndedIterator for queues & len_usize overflow fix are released
heapless = {git = "https://github.com/japaric/heapless", rev = "f9689ffdbe718ffd24e9b33dd33443ef52a8d74a"}
smart-leds-trait = "0.2.0"
