[package]
name = "c3_led_tail_trinketm0"
version = "0.1.0"
authors = ["David Sawatzke <david-sawatzke@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trinket_m0 = { git = "https://github.com/atsamd-rs/atsamd", features = ["unproven"]}
bitbang-hal = "0.3"
panic-semihosting = "0.5.3"
cortex-m = "0.6.1"
embedded-hal = "0.2.3"
cortex-m-rtfm = "0.5.1"
smart-leds = "0.3.0"
oorandom = "11.1.0"
nb = "0.1.2"
apa102-spi = "0.3.2"
instant-timer = "0.1"
c3_led_tail = {path = "../c3_led_tail"}

[profile.dev]
debug = true

[profile.release]
debug = true
lto = true
opt-level = "s"
